--- a/samples/autonomous-db/managed-odp/console-app/app.config
+++ b/samples/autonomous-db/managed-odp/console-app/app.config
@@ -47,12 +47,9 @@ Modify the ODP.NET version numbers below if using a version besides 18.3.
     </runtime>
     <oracle.manageddataaccess.client>
         <version number="*">
-            <dataSources>
-              <dataSource alias="autonomous"
- descriptor="(description=(address=(protocol=tcps)(port=<PORT>)(host=<HOSTNAME/IP>))(connect_data=(service_name=<SERVICE NAME>))(security=(ssl_server_cert_dn=<DISTINGUISHED NAME>))) "/>
-            </dataSources>
           <settings>
-            <setting name="Wallet_Location" value="(SOURCE = (METHOD = file) (METHOD_DATA = (DIRECTORY=<LOCAL DIRECTORY>)))"/>
+             <setting name="TNS_ADMIN" value="<DIRECTORY>"/>
+            <setting name="Wallet_Location" value="<DIRECTORY>"/>
           </settings>
         </version>
     </oracle.manageddataaccess.client>
